--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -31,5 +31,11 @@
   "ai_description": "Описание",
   "ai_tasks": "Этапы",
   "ai_improve": "Улучшить",
-  "ai_notes": "Заметки"
+  "ai_notes": "Заметки",
+  "additional_info": "Дополнительная информация",
+  "ask_ai": "Спросить ИИ",
+  "ask_ai_placeholder": "Задайте свой вопрос ИИ...",
+  "welcome_title": "Добро пожаловать в Projects Hub",
+  "welcome_description": "Управляйте своими проектами, отслеживайте задачи и получайте помощь ИИ для повышения продуктивности.",
+  "create_with_ai_prompt": "Создайте свой проект с помощником ИИ!"
 }
