--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -37,5 +37,6 @@
   "ask_ai_placeholder": "Задайте свой вопрос ИИ...",
   "welcome_title": "Добро пожаловать в Projects Hub",
   "welcome_description": "Управляйте своими проектами, отслеживайте задачи и получайте помощь ИИ для повышения продуктивности.",
-  "create_with_ai_prompt": "Создайте свой проект с помощником ИИ!"
+  "create_with_ai_prompt": "Создайте свой проект с помощником ИИ!",
+  "confirm_delete_task": "Вы действительно хотите удалить этот этап?"
 }
